--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "immutable": "^4.0.0-rc.12",
+    "immer": "^1.8.0",
     "jsonapi-deserializer": "^0.1.1",
     "ng2-ui-auth": "^9.2.0",
     "ngx-bootstrap": "^3.1.1",
