--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -13,6 +13,9 @@
     "target": "es5",
     "module": "es2015",
     "baseUrl": "",
+    "paths": {
+      "@aviacommerce/*": ["./app/*"],
+    },
     "types": []
   },
   "exclude": [
